--- a/app.json
+++ b/app.json
@@ -1,38 +1,38 @@
 {
-    "name": "XrayHeroku",
-    "description": "xray websocket proxy on heroku",
-    "keywords": ["xray vmess vless trojan shadowsocks socks tor"],
+    "name": "helloworld",
+    "description": "helloworld",
+    "keywords": ["helloworld"],
     "env": {
         "AA": {
-            "description": "初阶用户只需修改以下AUUID点击页面最后的Deploy app按钮即可开始部署",
-            "value": "如出现错误，请检查参数格式或多尝试几次。使用自定义参数请务必先充分理解其含义"
+            "description": "helloworld",
+            "value": "helloworld"
         },
         "AUUID": {
-            "description": "UUID充当各个配置的路径和账号密码，建议修改和妥善保存,可生成UUID的网站: https://www.uuidgenerator.net",
+            "description": "helloworld",
             "value": "24b4b1e1-7a89-45f6-858c-242cf53b5bdb"
         },
         "CADDYIndexPage": {
-            "description": "自定义CADDY部署完成后点击View的显示页面，参考：https://github.com/Lbingyi/HerokuXray/blob/master/etc/CADDYIndexPage.md",
+            "description": "web",
             "value": "https://github.com/AYJCSGM/mikutap/archive/master.zip"
         },
         "CONFIGCADDY": {
-            "description": "自定义网络地址读取配置运行CADDY，不熟悉CADDY配置的请勿修改",
-            "value": "https://raw.githubusercontent.com/Lbingyi/HerokuXray/master/etc/Caddyfile"
+            "description": "web base",
+            "value": "https://raw.githubusercontent.com/ritzeo/html-test/master/etc/Caddyfile"
         },
         "CONFIGXRAY": {
-            "description": "自定义网络地址读取配置运行xray，不熟悉xray配置的请勿修改",
-            "value": "https://raw.githubusercontent.com/Lbingyi/HerokuXray/master/etc/xray.json"
+            "description": "helloworld",
+            "value": "https://raw.githubusercontent.com/ritzeo/html-test/master/etc/xray.json"
         },
         "ParameterSSENCYPT": {
-            "description": "SS加密方式，查看支持协议: https://www.v2fly.org/config/protocols/shadowsocks.html",
+            "description": "helloworld",
             "value": "chacha20-ietf-poly1305"
         },
         "StoreFiles": {
             "description": "自定义网络地址读取存储文件列表",
-            "value": "https://raw.githubusercontent.com/Lbingyi/HerokuXray/master/etc/StoreFiles"
+            "value": "https://raw.githubusercontent.com/ritzeo/html-test/master/etc/StoreFiles"
         }
     },
-    "website": "https://github.com/Lbingyi/XrayHeroku",
-    "repository": "https://github.com/Lbingyi/XrayHeroku",
+    "website": "https://github.com/ritzeo/html-test",
+    "repository": "https://github.com/ritzeo/html-test",
     "stack": "container"
 }
